Update Query Dataset .ipynb

--- a/doc/notebook/Query Dataset .ipynb
+++ b/doc/notebook/Query Dataset .ipynb
@@ -7,7 +7,7 @@
     "id": "04ec69e2"
    },
    "source": [
-    "<h1> Querying RDF dataset with Apache Jena Fuseki </h1>"
+    "<h1> Querying RDF dataset </h1>"
    ]
   },
   {
